--- a/client/app/index.html
+++ b/client/app/index.html
@@ -27,7 +27,9 @@
     <div ng-include src="'views/header.html'"></div>
 
     <!-- Add your site or application content here -->
-    <div class="container" ng-view=""></div>
+    <div class="container">
+      <div class="view slide" ng-view=""></div>
+    </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
@@ -54,6 +56,8 @@
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/angular-ui-bootstrap/angular-ui-bootstrap.js"></script>
     <script src="bower_components/lodash/index.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
@@ -64,8 +68,13 @@
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/header.js"></script>
         <script src="scripts/services/AuthService.js"></script>
-        <script src="scripts/services/lodash.js"></script>
         <script src="scripts/controllers/signup.js"></script>
+        <script src="scripts/controllers/delivery.js"></script>
+        <script src="scripts/controllers/restaurateurs.js"></script>
+        <script src="scripts/services/cart.js"></script>
+        <script src="scripts/controllers/logout.js"></script>
+        <script src="scripts/directives/passwordVerify.js"></script>
+        <script src="scripts/controllers/account.js"></script>
         <!-- endbuild -->
 </body>
 </html>
