--- a/client/app/index.html
+++ b/client/app/index.html
@@ -28,7 +28,7 @@
 
     <!-- Add your site or application content here -->
     <div class="container">
-      <div class="view slide" ng-view=""></div>
+      <div class="view slide" ng-class="{reverse: reverseAnimation}" ng-view=""></div>
     </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
