--- a/client/app/index.html
+++ b/client/app/index.html
@@ -75,6 +75,7 @@
         <script src="scripts/directives/passwordVerify.js"></script>
         <script src="scripts/controllers/account.js"></script>
         <script src="scripts/controllers/clientorder.js"></script>
+        <script src="scripts/controllers/restaurant.js"></script>
         <!-- endbuild -->
 </body>
 </html>
