--- a/client/app/index.html
+++ b/client/app/index.html
@@ -76,6 +76,7 @@
         <script src="scripts/controllers/account.js"></script>
         <script src="scripts/controllers/clientorder.js"></script>
         <script src="scripts/controllers/restaurant.js"></script>
+        <script src="scripts/controllers/orders.js"></script>
         <!-- endbuild -->
 </body>
 </html>
