--- a/client/app/index.html
+++ b/client/app/index.html
@@ -12,6 +12,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/animate.css/animate.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
@@ -26,6 +27,7 @@
     <div ng-include src="'views/header.html'"></div>
 
     <!-- Add your site or application content here -->
+    <div growl-notifications class="growl-animate"></div>
     <div class="container">
       <div class="view slide" ng-class="{reverse: reverseAnimation}" ng-view=""></div>
     </div>
@@ -58,6 +60,7 @@
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/lodash/index.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/angular-growl-notifications/dist/growl-notifications.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -76,6 +79,8 @@
         <script src="scripts/controllers/clientorder.js"></script>
         <script src="scripts/controllers/restaurant.js"></script>
         <script src="scripts/controllers/orders.js"></script>
+        <script src="scripts/services/AuthIntercept.js"></script>
+        <script src="scripts/services/TokenHandler.js"></script>
         <!-- endbuild -->
 </body>
 </html>
