--- a/client/app/index.html
+++ b/client/app/index.html
@@ -81,6 +81,7 @@
         <script src="scripts/controllers/orders.js"></script>
         <script src="scripts/services/AuthIntercept.js"></script>
         <script src="scripts/services/TokenHandler.js"></script>
+        <script src="scripts/controllers/Menu.js"></script>
         <!-- endbuild -->
 </body>
 </html>
