--- a/client/app/index.html
+++ b/client/app/index.html
@@ -82,6 +82,7 @@
         <script src="scripts/services/AuthIntercept.js"></script>
         <script src="scripts/services/TokenHandler.js"></script>
         <script src="scripts/controllers/Menu.js"></script>
+        <script src="scripts/services/Menu.js"></script>
         <!-- endbuild -->
 </body>
 </html>
