Added More stuff for menu

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -83,6 +83,7 @@
         <script src="scripts/services/TokenHandler.js"></script>
         <script src="scripts/controllers/Menu.js"></script>
         <script src="scripts/services/Menu.js"></script>
+        <script src="scripts/services/Client.js"></script>
         <!-- endbuild -->
 </body>
 </html>
