Connected the Restaurant list
The form is still left to be edited, but I will leave that for later

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -84,6 +84,8 @@
         <script src="scripts/controllers/Menu.js"></script>
         <script src="scripts/services/Menu.js"></script>
         <script src="scripts/services/Client.js"></script>
+        <script src="scripts/services/Restaurant.js"></script>
+        <script src="scripts/services/AddressFormatter.js"></script>
         <!-- endbuild -->
 </body>
 </html>
