Basic Restaurateur list attached

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -86,6 +86,7 @@
         <script src="scripts/services/Client.js"></script>
         <script src="scripts/services/Restaurant.js"></script>
         <script src="scripts/services/AddressFormatter.js"></script>
+        <script src="scripts/services/Restaurateur.js"></script>
         <!-- endbuild -->
 </body>
 </html>
