Advancement on Menu and stuff

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -87,6 +87,8 @@
         <script src="scripts/services/Restaurant.js"></script>
         <script src="scripts/services/AddressFormatter.js"></script>
         <script src="scripts/services/Restaurateur.js"></script>
+        <script src="scripts/services/RestaurantMenu.js"></script>
+        <script src="scripts/services/CurrencyFormatter.js"></script>
         <!-- endbuild -->
 </body>
 </html>
