Client Order completed

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -89,6 +89,7 @@
         <script src="scripts/services/Restaurateur.js"></script>
         <script src="scripts/services/RestaurantMenu.js"></script>
         <script src="scripts/services/CurrencyFormatter.js"></script>
+        <script src="scripts/services/Commande.js"></script>
         <!-- endbuild -->
 </body>
 </html>
