--- a/client/app/index.html
+++ b/client/app/index.html
@@ -90,6 +90,8 @@
         <script src="scripts/services/RestaurantMenu.js"></script>
         <script src="scripts/services/CurrencyFormatter.js"></script>
         <script src="scripts/services/Commande.js"></script>
+        <script src="scripts/services/RestaurateurCommande.js"></script>
+        <script src="scripts/services/DateFormatter.js"></script>
         <!-- endbuild -->
 </body>
 </html>
