Completed Delivery UI

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -92,6 +92,7 @@
         <script src="scripts/services/Commande.js"></script>
         <script src="scripts/services/RestaurateurCommande.js"></script>
         <script src="scripts/services/DateFormatter.js"></script>
+        <script src="scripts/services/Livraison.js"></script>
         <!-- endbuild -->
 </body>
 </html>
