--- a/client/app/index.html
+++ b/client/app/index.html
@@ -43,6 +43,8 @@
        ga('send', 'pageview');
     </script>
 
+    <script src="//maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+
     <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
     <script src="bower_components/json3/lib/json3.min.js"></script>
@@ -93,6 +95,7 @@
         <script src="scripts/services/RestaurateurCommande.js"></script>
         <script src="scripts/services/DateFormatter.js"></script>
         <script src="scripts/services/Livraison.js"></script>
+        <script src="scripts/directives/map.js"></script>
         <!-- endbuild -->
 </body>
 </html>
